Fix banner on small screens

--- a/src/css/components/slider/image.css
+++ b/src/css/components/slider/image.css
@@ -301,3 +301,28 @@
 .splide__track--nav > .splide__list > .splide__slide.is-active {
     border-color: var(--theme-image-slider-title-background) !important;
 }
+
+@media (--c-bp-md) {
+
+    /* postcss-bem-linter: ignore */
+    .splide__pagination {
+        bottom: -27px !important;
+    }
+
+    /* postcss-bem-linter: ignore */
+    .splide__pagination__page.is-active {
+        background-color: var(--theme-primary-color) !important;
+        opacity: 1;
+    }
+
+    /* postcss-bem-linter: ignore */
+    .splide__dots--left .splide__pagination {
+        justify-content: center !important;
+    }
+    
+    /* postcss-bem-linter: ignore */
+    .splide__slide {
+        display: flex;
+        flex-direction: column;
+    }
+}
